iptables
# Generated by iptables-save v1.4.21 on Sat Jul 22 09:44:31 2017
*filter
:INPUT ACCEPT [101:4088]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [454:55260]
:DOCKER - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
COMMIT
# Completed on Sat Jul 22 09:44:31 2017
# Generated by iptables-save v1.4.21 on Sat Jul 22 09:44:31 2017
*nat
:PREROUTING ACCEPT [100:4100]
:INPUT ACCEPT [100:4100]
:OUTPUT ACCEPT [13:1068]
:POSTROUTING ACCEPT [13:1068]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Sat Jul 22 09:44:31 2017
